# lesson-master

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  python_learner.db  seed_debugging_plan.py
.github/workflows/: notify-pr.yml  notify-push.yml
alembic/: env.py
alembic/versions/: 623ae4287a2d_initial_schema.py  b1a2c3d4e5f6_add_subjects_rename_modules.py
app/: database.py  main.py  templating.py
app/models/: __init__.py  exercise.py  lesson.py  module.py  plan.py  topic.py
app/routers/: exercises.py  lessons.py  modules.py  plans.py  subjects.py  topics.py
app/services/: __init__.py  ai.py  exercise.py  lesson.py  module.py  plan.py  subject.py  topic.py
app/templates/: base.html
app/templates/exercises/: detail.html
app/templates/modules/: detail.html  index.html
app/templates/partials/: attempt_history.html  exercise_list.html  lesson_panel.html  module_list.html  module_topic_row.html  module_topics.html  plan_item_row.html  plan_items.html  plan_list.html  subject_description_field.html  subject_list.html  subject_modules.html  topic_list.html
app/templates/plans/: detail.html  index.html
app/templates/subjects/: detail.html  index.html
app/templates/topics/: detail.html  index.html
backups/: .gitkeep
data/: .gitkeep
static/: app.css
test/: conftest.py  test_api.py  test_backup_database.py  test_models.py  test_seed.py  test_services.py  test_subject_generation.py
utils/: backup_database.py  seed_data_v1.0.json  seed_data_v2.0.json  seed_database.py
