[project]
name = "lesson-master"
version = "0.3.0"
description = "Curriculum tracker organizing subjects, modules, topics, lessons, and exercises"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "anthropic>=0.30.0",
    "markdown>=3.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",   # for FastAPI TestClient
    "pytest-json-ctrf>=0.5.3",
]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["."]
addopts = "--ctrf=ctrf.json"
